<resources>
    <string name="app_name">员工管理</string>
    <string name="title_home">首页</string>
    <string name="title_dashboard">查询</string>
    <string name="title_notifications">通知</string>

    <string name="staff_img">身份证</string>
    <string name="staff_name">姓名</string>
    <string name="staff_idNumber">身份证号</string>
    <string name="staff_gender">性别</string>
    <string name="staff_ethnic">民族</string>
    <string name="staff_birthday">生日</string>
    <string name="staff_addr">地址</string>
    <string name="staff_issueAuth">签发机关</string>
    <string name="staff_limitDate">有效期限</string>
    <string name="staff_phone">手机号码</string>
    <string name="staff_contactType">紧急联系人类型</string>
    <string name="staff_contactTel">紧急联系人电话</string>
    <string name="staff_entryDate">入职日期</string>
    <string name="staff_workYears">工龄（年）</string>
    <string name="staff_dispatch">外派单位</string>
    <string name="staff_salary">薪资（元）</string>
    <string name="staff_credit">信用度</string>

    <string name="btn_save">保存</string>
    <string name="btn_back">返回</string>
    <string name="btn_search">搜索</string>

    <string name="hint_number">请输入数字</string>
    <string name="hint_search">请输入姓名或身份证号进行搜索</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
