<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="vertical"
    android:fadingEdge="vertical">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:yongyou="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <com.yonyou.stm.widget.TxtImg
        android:id="@+id/edit_img"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        yongyou:ti_title="@string/staff_img">
    </com.yonyou.stm.widget.TxtImg>
    <com.yonyou.stm.widget.TxtEdit
        android:id="@+id/edit_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        yongyou:te_title="@string/staff_name"
        yongyou:te_editable="true">
    </com.yonyou.stm.widget.TxtEdit>
    <com.yonyou.stm.widget.TxtEdit
        android:id="@+id/edit_idNumber"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        yongyou:te_title="@string/staff_idNumber"
        yongyou:te_editable="true">
    </com.yonyou.stm.widget.TxtEdit>
    <com.yonyou.stm.widget.TxtEdit
        android:id="@+id/edit_gender"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        yongyou:te_title="@string/staff_gender"
        yongyou:te_editable="true">
    </com.yonyou.stm.widget.TxtEdit>
    <com.yonyou.stm.widget.TxtEdit
        android:id="@+id/edit_ethnic"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        yongyou:te_title="@string/staff_ethnic"
        yongyou:te_editable="true">
    </com.yonyou.stm.widget.TxtEdit>
    <com.yonyou.stm.widget.TxtEdit
        android:id="@+id/edit_birthday"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        yongyou:te_title="@string/staff_birthday"
        yongyou:te_editable="true">
    </com.yonyou.stm.widget.TxtEdit>
    <com.yonyou.stm.widget.TxtEdit
        android:id="@+id/edit_addr"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        yongyou:te_title="@string/staff_addr"
        yongyou:te_editable="true">
    </com.yonyou.stm.widget.TxtEdit>
    <com.yonyou.stm.widget.TxtEdit
        android:id="@+id/edit_issueAuth"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        yongyou:te_title="@string/staff_issueAuth"
        yongyou:te_editable="true">
    </com.yonyou.stm.widget.TxtEdit>
    <com.yonyou.stm.widget.TxtEditRange
        android:id="@+id/edit_limitDate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        yongyou:ter_title="@string/staff_limitDate">
    </com.yonyou.stm.widget.TxtEditRange>
    <com.yonyou.stm.widget.TxtEdit
        android:id="@+id/edit_workYears"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        yongyou:te_title="@string/staff_workYears"
        yongyou:te_hint="@string/hint_number">
        <requestFocus />
    </com.yonyou.stm.widget.TxtEdit>
    <com.yonyou.stm.widget.TxtEdit
        android:id="@+id/edit_dispatch"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        yongyou:te_title="@string/staff_dispatch">
    </com.yonyou.stm.widget.TxtEdit>
    <com.yonyou.stm.widget.TxtEdit
        android:id="@+id/edit_salary"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        yongyou:te_title="@string/staff_salary"
        yongyou:te_hint="@string/hint_number">
    </com.yonyou.stm.widget.TxtEdit>
    <com.yonyou.stm.widget.TxtStar
        android:id="@+id/edit_credit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        yongyou:ts_title="@string/staff_credit">
    </com.yonyou.stm.widget.TxtStar>
    <Button
        android:id="@+id/btn_save"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        style="@style/btnSave"
        android:textSize="16sp"
        android:text="@string/btn_save"/>
    <Button
        android:id="@+id/btn_back"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        style="@style/btnBack"
        android:textSize="16sp"
        android:text="@string/btn_back"/>
</LinearLayout>
</ScrollView>